--- a/e-commerce-be/package.json
+++ b/e-commerce-be/package.json
@@ -20,9 +20,12 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
     "multer": "^1.4.5-lts.1",
+    "natural": "^8.0.1",
     "nodemon": "^2.0.20",
     "sharp": "^0.31.3",
     "sharp-multer": "^0.2.5",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "vector": "^0.0.4",
+    "vector-object": "^1.3.0"
   }
 }
